// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BankAccountNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Numer konta bankowego
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="bankAccountNumberField"
          label="Numer konta bankowego"
          name="name"
          placeholder="Numer konta bankowego"
          value="test"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podany numer konta jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="bankAccountNumberField"
  label="Numer konta bankowego"
  name="name"
  placeholder="Numer konta bankowego"
  value=""
/>
`;

exports[`<BankAccountNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="bankAccountNumberField"
          label="Test"
          name="name"
          placeholder="Numer konta bankowego*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="bankAccountNumberField"
          label="Test"
          name="name"
          placeholder="Numer konta bankowego"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
